newclay/test/Compiler/Propagation/Fail/IfStatementNotAllBranchesReturn2/main.clay
define nop;
overload nop() {}

define main;
overload main() {
    if (true)
        return 1;
    else
        nop();
}
